--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
     "nodemon": "^3.1.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
