--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posterizer-backend",
   "version": "1.0.0",
   "description": "high post backend and apies with mongodb",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "nodemon index.js",
     "start": "node index.js",
